--- a/style.css
+++ b/style.css
@@ -1,3 +1,104 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap");
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css");
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
+
+header{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8);
+    animation: zoom 30s
+}
+
+.img-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+}
+
+@keyframes zoom {
+    0%{
+        transform: scale(1.3);        
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+.banner{
+    position: absolute;
+    top: 20%;
+    left: 10%;
+}
+
+.banner h1{
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-family: "Baloo 2", serif;
+    font-weight: 400;
+    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+    line-height: 2.5rem;
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
+    
+}
+
+.banner p{
+    font-family:"Josefin Slab", serif ;
+    color:#ffffff;
+    font-weight: 400;
+    font-size: 2.5rem;
+    text-shadow: .2rem .2rem rgb(0, 0, 0, .4);
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
+}
+
+.banner button{
+font-family: "Mulish", serif;
+color: #ffffff;
+font-size: 1rem;
+text-transform: uppercase;
+letter-spacing: 0.1rem;
+background: #9D50BB;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #6E48AA, #9D50BB);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #6E48AA, #9D50BB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+padding: 1rem 4rem;
+border: none;
+border-radius: 10px;
+cursor: pointer;
+opacity: 0;
+animation: moveBanner 1s 0.9s forwards;
+
+}
+
+.banner button:hover{
+    opacity: 0.5;
+    color:rgba(0, 0, 0, .4)
+}
+
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100%{
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
+}
